--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,7 +1,7 @@
 
-<%= user %>
+<%#= user #%>
 
-<% console.log(user); %>
+<%# console.log(user); #%>
 
 <% if(user){ %>
 <% include header-login.ejs %>
