--- a/views/index.ejs
+++ b/views/index.ejs
@@ -403,8 +403,7 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-        <script type="text/javascript">
+        <script>
           $("#contactForm").submit(function(e)
           {
             var postData = $(this).serialize();
