--- a/views/templates/scripttemplate.ejs
+++ b/views/templates/scripttemplate.ejs
@@ -1,5 +1,6 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<!-- <script src="/public/javascripts/jquery.min.js"></script> -->
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
+<script src="/public/vendor/jquery/jquery.min.js"></script>
+<!--  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -61,3 +62,5 @@ function isCodepenURL(str){
 }
 
 </script>
+
+<script src="//localhost:35729/livereload.js"></script>
