--- a/views/templates/styletemplate.ejs
+++ b/views/templates/styletemplate.ejs
@@ -2,8 +2,10 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<!-- <link rel="stylesheet" href="stylesheets/bootstrap.min.css"> -->
+<!-- <link rel="stylesheet" href="/public/vendor/bootstrap/bootstrap.min.css"> -->
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="/public/vendor/font-awesome/css/font-awesome.min.css">
+
 
 <link rel="stylesheet" href="/public/stylesheets/style.min.css">
